--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title></title>
 </head>
 <body>
+ <div class="navbar">
+    <ol>logo</ol>
+    <ol>GAMING</ol>
+    <ol>PRÁCE</ol>
+    <ol>O SPOLEČNOSTI</ol>>
 
+    
 
 
 
