--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
- <head>
+
+<head>
     <link rel="stylesheet" href="styles.css" />
     <meta charset="utf-8" />
     <title>Home</title>
 </head>
-<body>
- <div class="navbar">
-    <ol>logo</ol>
-    <ol>GAMING</ol>
-    <ol>PRÁCE</ol>
-    <ol>O SPOLEČNOSTI</ol>>
 
-    
+<body>
+    <div class="navbar">
+        <ol>logo</ol>
+        <ol>GAMING</ol>
+        <ol>PRÁCE</ol>
+        <ol>O SPOLEČNOSTI</ol>
+
+
 
 
 
@@ -26,6 +28,4 @@
 
 
 </body>
-</html>>
-
-
+</html>
