--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!--To kde si překlikáváš stránky ty hňupe :)-->
     <div class="navbar">
         <ol>logo</ol>
         <ol>GAMING</ol>
