--- a/home.html
+++ b/home.html
@@ -10,9 +10,9 @@
 <body>
 <ul>
   <li><a href="home.html">LOGOASS</li>  
-  <li>><a href="gaming.html">GAMING</a></li>  
-  <li>><a href="prace.html">PRÁCE</a></li>  
-  <li>><a href="about.html">O SPOLEČNOSTI</a></li>  
+  <li><a href="gaming.html">GAMING</a></li>  
+  <li><a href="prace.html">PRÁCE</a></li>  
+  <li><a href="about.html">O SPOLEČNOSTI</a></li>  
 
 
 
