--- a/home.html
+++ b/home.html
@@ -7,7 +7,8 @@
     <title>Home</title>
 </head>
 
-<body>
+<body>¨
+  <!--Tady si přepínáš stránky ty hňupe-->
 <ul>
   <li><a href="home.html">LOGOASS</li>  
   <li><a href="gaming.html">GAMING</a></li>  
