--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <body>
 <ul>
   <li><a href="home.html">LOGOASS</li>  
-  <li><a href="gaming.html">GAMING</a></li>  
+  <li><a href="#">GAMING</a></li>  
   <li><a href="prace.html">PRÁCE</a></li>  
   <li><a href="about.html">O SPOLEČNOSTI</a></li>  
 
