--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <title>Home</title>
 </head>
 
-<body>¨
+<body>
   <!--Tady si přepínáš stránky ty hňupe-->
 <ul>
   <li><a href="home.html">LOGOASS</li>  
