--- a/home.html
+++ b/home.html
@@ -4,22 +4,33 @@
 <head>
     <link rel="stylesheet" href="styles.css" />
     <meta charset="utf-8" />
-    <title>Home</title>
+    <title>Domů</title>
 </head>
 
 <body>
-  <!--Tady si přepínáš stránky ty hňupe-->
-<ul>
-  <li><a href="home.html">LOGOASS</li>  
-  <li><a href="#">GAMING</a></li>  
-  <li><a href="prace.html">PRÁCE</a></li>  
-  <li><a href="about.html">O SPOLEČNOSTI</a></li>  
+    <!--Tady si přepínáš stránky ty hňupe-->
+    <ul>
+        <li><a href="home.html">LOGOASS</li>
+        <li><a href="#">GAMING</a></li>
+        <ul>
+            <li><a href="">Střední třída</a></li>
+            <li><a href="">Vyšší třída</a></li>
+            <li><a href="">Herní špička</a></li>
+        </ul>
+        <li><a href="prace.html">PRÁCE</a></li>
+        <ul>
+            <li><a href="">Střední třída</a></li>
+            <li><a href="">Vyšší třída</a></li>
+        </ul>
+        <li><a href="about.html">O SPOLEČNOSTI</a></li>
+        <ul>
+            <li><a href="">O nás</a></li>
+            <li><a href="">Podpora</a></li>
+            <li><a href="">Kontakt</a></li>
+            <li><a href="">Kariéra</a></li>
 
-
-
-
-
-</ul>
+        </ul>
+      </ul>
 
 
 
@@ -34,4 +45,5 @@
 
 
 </body>
+
 </html>
