--- a/home.html
+++ b/home.html
@@ -11,18 +11,20 @@
     <!--Tady si přepínáš stránky ty hňupe-->
     <ul>
         <li><a href="home.html">LOGOASS</li>
-        <li><a href="#">GAMING</a></li>
+        <li><a href="#">GAMING</a>
         <ul>
             <li><a href="">Střední třída</a></li>
             <li><a href="">Vyšší třída</a></li>
             <li><a href="">Herní špička</a></li>
         </ul>
-        <li><a href="prace.html">PRÁCE</a></li>
+        </li>
+        <li><a href="prace.html">PRÁCE</a>
         <ul>
             <li><a href="">Střední třída</a></li>
             <li><a href="">Vyšší třída</a></li>
         </ul>
-        <li><a href="about.html">O SPOLEČNOSTI</a></li>
+        </li>
+        <li><a href="about.html">O SPOLEČNOSTI</a>
         <ul>
             <li><a href="">O nás</a></li>
             <li><a href="">Podpora</a></li>
@@ -30,6 +32,7 @@
             <li><a href="">Kariéra</a></li>
 
         </ul>
+        </li>
       </ul>
 
 
